# haskell-libexpect

./: configure  configure.ac  libexpect.buildinfo  libexpect.cabal  license.txt
System/: Expect.hs
System/Expect/: ExpectBindings.hsc  ExpectCombinators.hs  ExpectInterface.hs  expect_config.h.in
